# substack-mirror

./: DESIGN.md  README.md  start.bat  start.sh
backend/: .env  README.md  __init__.py  ai_processor.py  database.py  main.py  models.py  pyproject.toml  worker.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/posts/[slug]/: page.tsx
frontend/src/app/publications/: page.tsx
frontend/src/components/: footer.tsx  navbar.tsx
frontend/src/lib/: api.ts
